Added element functionability and new tempLogo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="navbar">
-        <img src="https://cdn-icons-png.flaticon.com/512/2999/2999914.png" alt="Logo" class="logo">
+        <img src="./Logo.png" alt="Logo" class="logo">
         <div style="flex-grow: 1;"></div>
 
         <button class="button sortear">SORTEAR</button>
@@ -21,6 +21,7 @@
     </div>
     <div class="container">
         <div class="estadoJogo">Novo Jogo</div>
+        <div class="elementoSorteado">Bem vindo ao Bingo dos Elementos Químicos</div>
         <div class="numero b">B</div>
         <div class="numero i">I</div>
         <div class="numero n">N</div>
