--- a/index.html
+++ b/index.html
@@ -17,8 +17,20 @@
 
         <button class="button sortear">SORTEAR</button>
         <button class="button reset"><i class="fa-solid fa-rotate-right"></i></button>
-        <button class="button info"><i class="fa-solid fa-circle-info"></i></button>
+        <button class="button info show-modal"><i class="fa-solid fa-circle-info"></i></button>
     </div>
+    <div class="modal hidden">
+        <button class="close-modal">&times;</button>
+        <h1>Bingo dos Elementos Químicos</h1>
+        <p>
+            O "Bingo dos Elementos Químicos" é uma ferramenta divertida e educativa criada por César Nunes à pedido da Profa. Alice Nunes Garbúlio. 
+            O objetivo deste site é auxiliar os alunos no aprendizado da química, oferecendo uma maneira interativa de revisar os elementos químicos, explorar suas propriedades e testar seus conhecimentos.
+            Através do jogo de bingo, você pode aprender sobre os elementos, suas características e suas posições na tabela periódica, tornando o estudo da química mais envolvente e divertido.
+            Divirta-se jogando e aprimore seus conhecimentos sobre os elementos químicos!
+        </p>
+      </div>
+      <div class="overlay hidden"></div>
+    
     <div class="container">
         <div class="estadoJogo">Novo Jogo</div>
         <div class="elementoSorteado">Bem vindo ao Bingo dos Elementos Químicos</div>
@@ -149,6 +161,17 @@
         <div class="numero"></div>
         <button class="button sortear">SORTEAR</button>
     </div>
+
+    <footer>
+        <div class="footer-content">
+            <span>&copy; 2023 Cesar Nunes</span>
+            <a href="https://github.com/cesarnuness" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+    </footer>
+    
+
 
     <script src="https://kit.fontawesome.com/cf910c8290.js" crossorigin="anonymous"></script>
 </body>
