--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>::Bingo de Química::  ETEC Cabrália Paulista</title>
+    <title>::Bingo Químico:: ETEC Cabrália Paulista ::</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
