--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </footer>
     
 
-    <script src="main.js"></script>
-    <script src="https://kit.fontawesome.com/cf910c8290.js" crossorigin="anonymous"></script>
+    <script type="module" src="main.js"></script>
+    <script type="module" src="https://kit.fontawesome.com/cf910c8290.js" crossorigin="anonymous"></script>
 </body>
 </html>
